# phoscal

./: hello.py  pyproject.toml
.github/workflows/: pull_request.yaml  reusuable-test.yaml
src/phoscal/: cleaning.py  cli.py  exceptions.py
tests/: test_cleaning.py
