[tool.pdm.build]
includes = ["src/phoscal"]

[build-system]
requires = ["pdm-backend"]
build-backend="pdm.backend"

[project]
name = "phoscal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]


[project.scripts]
phoscal = "phoscal.cli:app"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
]
